--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,22 @@ env:
 matrix:
   include:
     - os: linux
-      dist: trusty
+      dist: jammy
       sudo: true
       compiler: gcc
       addons:
        apt:
          packages: &precise_latest_boost_packages
-           - gcc-4.8
-           - g++-4.8
-           - clang-3.7
+           - gcc-12
+           - g++-12
+           - clang-14
            - valgrind
            # Misc
-           - python-yaml
+           - python3-yaml
+           - cmake
            - lcov
            - libopencv-dev
-         sources: &precise_latest_boost_sources
-           - ubuntu-toolchain-r-test
-           - llvm-toolchain-precise-3.7
+
     
 before_install:
     # Combine global build options with OS/compiler-dependent options
@@ -37,21 +36,12 @@ before_install:
     - export CXX_FLAGS="${CXX_FLAGS} ${ENV_CXX_FLAGS}"
 
 install:
-    - if [ "$CXX" = "clang++" ] && [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
+    - if [ "$CXX" = "clang++" ] && [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX="clang++-14" CC="clang-14"; fi
     - echo ${PATH}
     - echo ${CXX}
     - ${CXX} --version
     - ${CXX} -v
     - sudo pip install codecov
-    
-    # Download and install recent cmake
-    - |
-      if [[ ${TRAVIS_OS_NAME} == "linux" ]]; then
-        CMAKE_URL="http://www.cmake.org/files/v3.5/cmake-3.5.1-Linux-x86_64.tar.gz"
-        mkdir -p ${DEPS_DIR}/cmake
-        travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C ${DEPS_DIR}/cmake
-        export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-      fi
 
 script:
     ############################################################################
