--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,10 +18,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - uses: einaregilsson/build-number@v3
         with:
           token: ${{secrets.github_token}}
-          submodules: true
 
       - name: Install compiler and packages
         shell: bash
@@ -32,10 +33,15 @@ jobs:
           sudo pip install codecov
 
       - name: Create CMake build files
+        working-directory: ${{github.workspace}}
         shell: bash
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         run: |
+          ls -la
+          cd googletest
+          ls -la
+          pwd
           CXX_FLAGS="-Wall -Werror -Wno-variadic-macros -Wno-long-long -Wno-shadow"
           export CMAKE_OPTIONS="${CMAKE_OPTIONS} ${ENV_CMAKE_OPTIONS}"
           export CXX_FLAGS="${CXX_FLAGS} ${ENV_CXX_FLAGS}"
